--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Database
+ipaddr.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +130,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Ignore dynaconf secret files
+.secrets.*
